--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,4 +17,8 @@ bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # Help nvim to escape files fast
-set -sg escape-time 10
+set -sg escape-time 0
+
+# Start window and pane numbering at 1
+set -g base-index 1
+setw -g pane-base-index 1
