--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -3,13 +3,13 @@
   "editor.cursorBlinking": "smooth",
   "editor.cursorSurroundingLines": 15,
   "workbench.startupEditor": "none",
-  "editor.fontSize": 11,
+  "editor.fontSize": 9,
   "editor.tabSize": 2,
   "vim.foldfix": true,
-  "terminal.integrated.fontSize": 11,
+  "terminal.integrated.fontSize": 10,
   "github.copilot.enable": {
     "*": true,
-    "plaintext": false,
+    "plaintext": true,
     "markdown": true,
     "scminput": false,
     "yaml": false
@@ -37,4 +37,14 @@
   "[json]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "editor.inlineSuggest.enabled": true,
+  "[svelte]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "css.lint.unknownAtRules": "ignore",
+  "svelte.enable-ts-plugin": true,
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "markdown-preview-enhanced.previewTheme": "atom-dark.css",
 }
